<resources>
    <string name="app_name">LuvCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lovecalculator">LoveCalculator</string>
    <string name="first_name">first name</string>
    <string name="second_name">Second Name</string>
    <string name="calculate">Calculate</string>
    <string name="try_again">Try Again</string>
    <string name="your_score">Your Score</string>
    <string name="percentage">Percentage</string>
    <string name="me">Me</string>
    <string name="you">You</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="get_started">Get Started</string>
    <string name="history">History</string>
</resources>